testsuite/bsc.real/evaluator/errors/AddPosInfNegInf.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling AddPosInfNegInf.bsv
code generation for sysAddPosInfNegInf starts
Error: "AddPosInfNegInf.bsv", line 8, column 22: (G0113)
  An addition or subtraction operator attempted to combine positive and
  negative infinity during elaboration.
  During elaboration of the body of rule `r' at "AddPosInfNegInf.bsv", line
  10, column 10.
  During elaboration of `sysAddPosInfNegInf' at "AddPosInfNegInf.bsv", line 4,
  column 8.
